# krita-ai-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ai_tools.desktop  krita_ai_tools.json  krita_ai_tools.qrc  vision_tools.desktop
icons/: kritavisionml.qrc
python/: __init__.py  extension.py  manual.html
scripts/: build-vulkan.sh  install-krita-with-segmentation.sh
segmentation/: CMakeLists.txt  DLImgEditLibrary.cpp  DLImgEditLibrary.h  SegmentationToolCommon.cpp  SegmentationToolCommon.h  SegmentationToolHelper.cpp  SegmentationToolHelper.h  SegmentationToolPlugin.cpp  SegmentationToolPlugin.h  SegmentationToolShared.cpp  SegmentationToolShared.h  SelectSegmentFromPointTool.action  SelectSegmentFromPointTool.cpp  SelectSegmentFromPointTool.h  SelectSegmentFromRectTool.action  SelectSegmentFromRectTool.cpp  SelectSegmentFromRectTool.h  ToolSegmentation.action  kritatoolsegmentation.qrc
src/: CMakeLists.txt  VisionML.cpp  VisionML.h  VisionMLPlugin.cpp  VisionMLPlugin.h  kritavisionml.json  vision_filters.action  vision_ml.action  vision_tools.action
src/filters/: BackgroundRemovalFilter.cpp  BackgroundRemovalFilter.h
src/inpaint/: InpaintTool.cpp  InpaintTool.h
src/segmentation/: SegmentationToolHelper.cpp  SegmentationToolHelper.h  SegmentationToolPlugin.cpp  SegmentationToolShared.cpp  SegmentationToolShared.h  SelectSegmentFromPointTool.cpp  SelectSegmentFromPointTool.h  SelectSegmentFromRectTool.cpp  SelectSegmentFromRectTool.h
